<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cst_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_48sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cts_bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_10sdp"
        android:gravity="center"
        android:paddingTop="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@+id/banner_ad_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.base.customView.ExtTextView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawableTop="@drawable/ic_home"
            android:padding="@dimen/_4sdp"
            android:text="@string/home"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_lever"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.base.customView.ExtTextView
            android:id="@+id/btn_lever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawableTop="@drawable/ic_lever"
            android:padding="@dimen/_4sdp"
            android:text="@string/lever"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_setting"
            app:layout_constraintStart_toEndOf="@id/btn_home" />

        <com.example.base.customView.ExtTextView
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:drawableTop="@drawable/ic_setting"
            android:padding="@dimen/_4sdp"
            android:text="@string/setting"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_lever" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.applovin.mediation.ads.MaxAdView xmlns:maxads="http://schemas.applovin.com/android/1.0"
        maxads:adUnitId="83b8138c5bb1c19c"
        android:id="@+id/banner_ad_view"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <include
        android:id="@+id/loading_ads_layout"
        layout="@layout/loading_ads_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>