<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:nestedScrollingEnabled="false"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/select_language"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_20sdp"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/next"
            android:textColor="@color/blue_00"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_english"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@color/transparent"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/native_ad_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <FrameLayout
        android:id="@+id/native_ad_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/ll_AdMod_Native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_search_corner_8"
        android:backgroundTint="@color/color_EDEFF1"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <com.example.base.customView.ExtTextView
            android:id="@+id/ext_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="AdMod Native Advanced"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <com.example.base.customView.ExtTextView
            android:id="@+id/ext_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:autoLink="all"
            android:text="Figma.com"
            android:textColor="@color/black"
            android:textColorLink="@color/color_2F6BFF"
            android:textSize="@dimen/_12sdp" />

        <com.example.base.customView.ExtTextView
            android:id="@+id/ext_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="Description content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <com.example.base.customView.ExtTextView
            android:id="@+id/ext_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/bg_search_corner_8"
            android:backgroundTint="@color/color_21C3FF"
            android:paddingStart="@dimen/_48sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_48sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/open"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>