<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/setting"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/cl_language"
        android:background="@drawable/bg_button_white"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_14sdp">

        <ImageView
            android:layout_marginVertical="@dimen/_8sdp"
            android:id="@+id/iv_language"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:src="@drawable/ic_setting_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/language"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_language"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_3sdp"
            android:src="@drawable/ic_arround_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_marginStart="@dimen/_41sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:background="@color/color_E8E8E8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/cl_privacy"
        android:background="@drawable/bg_button_white"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_14sdp">

        <ImageView
            android:layout_marginVertical="@dimen/_8sdp"
            android:id="@+id/iv_privacy"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:src="@drawable/ic_language_privacy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/privacy"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_privacy"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_3sdp"
            android:src="@drawable/ic_arround_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_marginStart="@dimen/_41sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:background="@color/color_E8E8E8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_button_white"
        android:layout_height="wrap_content"
        android:id="@+id/clAbout_app"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_14sdp">

        <ImageView
            android:layout_marginVertical="@dimen/_8sdp"
            android:id="@+id/iv_about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_about_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/about_app"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_about_app"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_3sdp"
            android:src="@drawable/ic_arround_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_marginStart="@dimen/_41sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:background="@color/color_E8E8E8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@drawable/bg_button_white"
        android:layout_height="wrap_content"
        android:id="@+id/appLovinDebug"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_14sdp">

        <ImageView
            android:layout_marginVertical="@dimen/_8sdp"
            android:id="@+id/iv_applovindebug_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_about_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="APP LOVIN DEBUGER"
            android:textColor="@color/black_1F"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_applovindebug_app"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_3sdp"
            android:src="@drawable/ic_arround_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_marginStart="@dimen/_41sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:background="@color/color_E8E8E8"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>